added docs and request fix
