# src/routes/recipesRouter.js
@@ -5,10 +5,11 @@ import { validateBody } from "../middlewares/validateBody.js";
 import { upload } from '../middlewares/multer.js';
 import { createRecipeSchema } from '../validation/recipe.validation.js';
 import { createNewRecipeController } from '../controllers/createNewRecipeController.js';
+import { parseFormDataJson } from '../middlewares/parseFormDataJson.js';
 
 const router = Router();
 
-router.post('/', upload.single('recipeImg'), validateBody(createRecipeSchema), /*authenticate,*/ ctrlWrapper(createNewRecipeController));
+router.post('/', upload.single('thumb'), parseFormDataJson, validateBody(createRecipeSchema), authenticate, ctrlWrapper(createNewRecipeController));
 
 
 
